--- a/Homework/week 3/index.html
+++ b/Homework/week 3/index.html
@@ -2,11 +2,17 @@
 
 <html>
 	<head>
+		<style type = "text/css">
+		canvas {border: 1px solid blue; }
+		</style>
 		<title>Javascript Introduction</title>
-		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 	<body>
-		<textarea name="max-temperature" rows="362" cols="50">
+		<canvas id ="canvas">
+			yolo
+		</canvas>
+		<div style = "display:none">
+		<textarea  id = "data"  rows="362" cols="50">
 			19960102,-3
 			19960103,8
 			19960104,23
@@ -373,8 +379,8 @@
 			19961230,3
 			19961231,-57
 			19970101,-73
-
+		</div>
     </textarea>
-    <script src="C:\Users\daan\Desktop\DataProcessing\Homework\week 3"></script>
+    <script src="convertFile.js"></script>
 	</body>
 </html>
