--- a/Homework/week 4/index2.html
+++ b/Homework/week 4/index2.html
@@ -9,19 +9,21 @@
 	</head>
 	<body>
 		<div id = "tagH"
-		style = "position: absolute; left: 300px; top: 300px; width: 30px; height: 30px;transform:rotate(90deg)"
-			<p>SWAG</p>
+		color:red;
+		style = "position: absolute; left: 300px; top: 300px; width: 20px; height: 20px;transform:rotate(90deg); color:red;"
+			<p>Date</p>
 
 		</div >
 		<div id = "tagV"
-		style = "position: absolute; left: 400px; top: 400px; width: 30px; height: 30px;"
-		<p>SWAG</p>
+		color:red;
+		style = "position: absolute; left: 400px; top: 400px; width: 300px; height: 300px; color: purple;"
+		<p>Temperature</p>
 
 	</div>
-		<p id="demo"></p>
-		<canvas id ="canvas2" style = "position: absolute" onmousemove="showCoords(event)" onmouseout="clearCoor()"></canvas>
+		<p id="canvaslijn"></p>
+		<canvas id ="canvas2" style = "position: absolute;" onmousemove="showCoords(event)" onmouseout="clearCoor()"></canvas>
 
-		<canvas id ="canvas"></canvas>
+		<canvas id ="canvas" ></canvas>
 		<div style = "display:none">
 		<textarea  id = "data"  rows="362" cols="50">
 [["19960102", "-3"], ["19960103", "8"], ["19960104", "23"], ["19960105", "15"], ["19960106", "-8"], ["19960107", "80"], ["19960108", "79"], ["19960109", "64"], ["19960110", "70"], ["19960111", "93"], ["19960112", "101"], ["19960113", "101"], ["19960114", "111"], ["19960115", "71"], ["19960116", "26"], ["19960117", "18"], ["19960118", "-1"], ["19960119", "-8"], ["19960120", "2"], ["19960121", "-1"], ["19960122", "21"], ["19960123", "-15"], ["19960124", "-15"], ["19960125", "-62"], ["19960126", "-80"], ["19960127", "-35"], ["19960128", "-9"], ["19960129", "9"], ["19960130", "21"], ["19960131", "36"], ["19960201", "34"], ["19960202", "18"], ["19960203", "3"], ["19960204", "28"], ["19960205", "26"], ["19960206", "-2"], ["19960207", "-30"], ["19960208", "-49"], ["19960209", "15"], ["19960210", "57"], ["19960211", "51"], ["19960212", "50"], ["19960213", "20"], ["19960214", "5"], ["19960215", "25"], ["19960216", "84"], ["19960217", "71"], ["19960218", "71"], ["19960219", "31"], ["19960220", "-17"], ["19960221", "-12"], ["19960222", "25"], ["19960223", "21"], ["19960224", "56"], ["19960225", "99"], ["19960226", "81"], ["19960227", "94"], ["19960228", "67"], ["19960229", "78"], ["19960301", "49"], ["19960302", "47"], ["19960303", "48"], ["19960304", "45"], ["19960305", "42"], ["19960306", "70"], ["19960307", "58"], ["19960308", "78"], ["19960309", "82"], ["19960310", "80"], ["19960311", "30"], ["19960312", "14"], ["19960313", "29"], ["19960314", "55"], ["19960315", "79"], ["19960316", "92"], ["19960317", "73"], ["19960318", "78"], ["19960319", "69"], ["19960320", "133"], ["19960321", "122"], ["19960322", "90"], ["19960323", "110"], ["19960324", "75"], ["19960325", "126"], ["19960326", "54"], ["19960327", "72"], ["19960328", "76"], ["19960329", "72"], ["19960330", "74"], ["19960331", "62"], ["19960401", "59"], ["19960402", "60"], ["19960403", "81"], ["19960404", "123"], ["19960405", "133"], ["19960406", "113"], ["19960407", "134"], ["19960408", "104"], ["19960409", "149"], ["19960410", "144"], ["19960411", "99"], ["19960412", "72"], ["19960413", "112"], ["19960414", "130"], ["19960415", "166"], ["19960416", "188"], ["19960417", "202"], ["19960418", "175"], ["19960419", "199"], ["19960420", "252"], ["19960421", "246"], ["19960422", "253"], ["19960423", "196"], ["19960424", "162"], ["19960425", "167"], ["19960426", "181"], ["19960427", "205"], ["19960428", "163"], ["19960429", "113"], ["19960430", "147"], ["19960501", "176"],
